--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -23,7 +23,7 @@
 }
 
 .skills {
-    width: 45%;
+    width: 40%;
     display: flex;
     flex-wrap: wrap;
     gap: 37px;
@@ -57,7 +57,7 @@
 }
 
 .history {
-    width: 45%;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 40px;
@@ -66,7 +66,7 @@
 .historyItem {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: flex-start;
     gap: 17px;
     background: #19376d;
     background: linear-gradient(
@@ -79,6 +79,7 @@
 }
 
 .historyItem img {
+    padding-top: 9px;
     width: 50px;
 }
 
@@ -98,8 +99,8 @@
 
 .historyItemDetails ul {
     margin-top: 6px;
-    list-style-position: inside;
-    font-size: 25px;
+    list-style-position: outside;
+    font-size: 23px;
     list-style-type: disc;
     margin-left: 17px;
 }
