Se hace unos cambios de diseño de la seccion de hero.

--- a/src/vars.css
+++ b/src/vars.css
@@ -4,6 +4,7 @@
     --color-primary: #576cbc;
     --color-secondary: #19376d;
     --color-dark: #0b2447;
+    --color-button: #5fbcff;
     --color-bg: #04152d;
 
     /* Fonts */
