--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -36,22 +36,30 @@
 .description {
     font-size: 30px;
     font-family: var(--font-roboto);
+    text-align: justify;
     margin-bottom: 52px;
 }
 
 .contactBtn {
     text-decoration: none;
-    background-color: var(--color-primary);
+    background-color: var(--color-button);
     color: var(--color-text);
     border-radius: 100px;
     font-size: 30px;
     font-weight: 600;
     padding: 17px 26px;
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
+    transition: 0.3s;
+}
+
+.contactBtn:hover {
+    background-color: var(--color-text);
+    color: var(--color-button);
 }
 
 .heroImg {
-    width: 50%;
+    width: 45%;
+    padding: 5%;
     z-index: 1;
 
     animation-name: floating;
@@ -107,5 +115,13 @@
 
     .content {
         align-items: center;
+    }
+
+    .title {
+        text-align: center;
+    }
+
+    .heroImg {
+        width: 270px;
     }
 }
