--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -5,10 +5,10 @@
     margin-top: 120px;
     background-color: var(--color-secondary);
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-evenly;
     width: 100vw;
-    padding: 58px 10%;
+    padding: 5px 10%;
     gap: 10px;
 }
 
@@ -16,6 +16,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 10px;
 }
 
 .text h2 {
@@ -26,52 +27,33 @@
 
 .links {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    flex-direction: row;
+    justify-content: center;
     list-style: none;
-    gap: 26px;
+    gap: 25px;
+    margin-bottom: 15px;
 }
 
 .link {
     display: flex;
     align-items: center;
-    gap: 25px;
+    opacity: 50%;
 }
 
-.link a {
-    color: var(--color-text);
-    text-decoration: none;
-    font-size: 30px;
-    font-weight: 400;
-    letter-spacing: 1.5px;
-}
-
-@media screen and (max-width: 1050px) {
-    .text h2 {
-        font-size: 75px;
-    }
-
-    .link a {
-        font-size: 23px;
-    }
+.link:hover {
+    opacity: 100%;
 }
 
 @media screen and (max-width: 830px) {
     .container {
-        flex-direction: column;
-        gap: 23px;
-    }
-
-    .links {
-        align-items: center;
+        margin-top: 70px;
     }
 
     .text h2 {
-        font-size: 70px;
+        font-size: 60px;
     }
-
-    .link a {
-        font-size: 18px;
-        letter-spacing: 0.1px;
+    
+    .links {
+        gap: 10px;
     }
 }
