--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -10,8 +10,23 @@
     margin: 0 10%;
 }
 
+.navbarFixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px 10%;
+    margin: 0;
+    z-index: 10;
+    background-color: var(--color-dark);
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
+}
+
 .title {
-    font-size: 30px;
+    font-size: 35px;
     font-weight: 600;
     text-decoration: none;
     color: var(--color-text);
@@ -36,6 +51,11 @@
     font-size: 25px;
     color: var(--color-text);
     text-decoration: none;
+    opacity: 50%;
+}
+
+.menuItems a:hover {
+    opacity: 100%;
 }
 
 @media screen and (max-width: 1000px) {
@@ -83,6 +103,10 @@
         );
         padding: 24px 33px;
         box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
+    }
+
+    .menuItems a {
+        opacity: 100%;
     }
 
     .menuOpen {
