--- a/src/components/Projects/ProjectCard.module.css
+++ b/src/components/Projects/ProjectCard.module.css
@@ -6,12 +6,13 @@
     border-radius: 10px;
     background: linear-gradient(
         180deg,
-        #1b3e7e 0%,
-        #132a53 100%
+        var(--color-secondary) 0%,
+        var(--color-dark) 100%
     );
     box-shadow: 0 16px 14px 0 #04152d;
     padding: 18px 24px;
     max-width: 345px;
+    transition: 0.2s;
 }
 
 .image {
@@ -21,7 +22,6 @@
 .title {
     font-size: 25px;
     font-weight: 700;
-    text-align: center;
 }
 
 .description {
@@ -37,17 +37,17 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
     gap: 6px;
     list-style: none;
 }
 
 .skill {
-    font-size: 25px;
+    height: 27px;
+    font-size: 18px;
     font-weight: 400;
     border-radius: 100px;
     background: var(--color-dark);
-    padding: 2px 22px;
+    padding: 2px 12px;
 }
 
 .links {
