--- a/src/components/TranslateButton/TranslateButton.module.css
+++ b/src/components/TranslateButton/TranslateButton.module.css
@@ -7,8 +7,8 @@
     bottom: 25px;
     right: 25px;
     z-index: 5;
-    background-color: var(--color-text);
-    color: var(--color-button);
+    background-color: var(--color-button);
+    color: var(--color-text);
     border: none;
     border-radius: 50px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -18,6 +18,16 @@
 }
 
 .button:hover {
-    background-color: var(--color-button);
-    color: var(--color-text);
+    background-color: var(--color-text);
+    color: var(--color-button);
+}
+
+@media screen and (max-width: 830px) {
+    .button {
+        height: 55px;
+        width: 55px;
+        bottom: 5px;
+        right: 5px;
+        font-size: 13px;
+    }
 }
